# socc_icp

./: .dockerignore  .gitignore  .gitmodules  CITATION.cff  DATASETS.md  Dockerfile  INSTALLATION.md  LICENSE  README.md
src/socc_icp/: .gitignore  pyproject.toml
src/socc_icp/configs/: config_defaults.yaml  config_ground_challenge.yaml  config_kitti_no_semantics.yaml  config_kitti_semantics.yaml  config_mulran.yaml  config_newer_college.yaml  config_subt_mrs.yaml
src/socc_icp/run/: eval.py  read_print_results.py  run_ground_challenge.py  run_kitti.py  run_mulran.py  run_newer_college.py  run_subt_mrs.py
src/socc_icp/scripts/: fix_subt_mrs.py  prepare_ground_challenge.py  prepare_newer_college.py
src/socc_icp/scripts/data_preparation/ground_challenge/: README.md  prep_ground_challenge_cloud_with_times.py
src/socc_icp/scripts/data_preparation/newer_college/: README.md  newer_college_rosbag.py  prep_newer_college_long_experiment.py
src/socc_icp/socc_icp/config/: config.py  load.py
src/socc_icp/socc_icp/core/: adaptive_threshold.py  downsampler.py  registration.py
src/socc_icp/socc_icp/core/data_classes/: correspondences.py  grid_chunk.py
src/socc_icp/socc_icp/dataset/: dataset.py  ground_challenge.py  kitti.py  mulran.py  newer_college.py  subt_mrs.py
src/socc_icp/socc_icp/deskewing_cpp/: CMakeLists.txt  deskewer.cpp
src/socc_icp/socc_icp/metrics/: kitti_eval_odom.py  metrics.py
src/socc_icp/socc_icp/pipeline/: pipeline.py  socc_icp.py
src/socc_icp/socc_icp/util/: radix.py  run_sequence.py  statistics.py  tf_to_str.py  transform_msg.py
(+3 files in other folders)
